fix useless blank behind header-container.2

--- a/assets/css/accueil.css
+++ b/assets/css/accueil.css
@@ -1,3 +1,6 @@
+.site-header {
+    background-color: #000;
+}
 /* Container remains the anchor for everything */
 .header-container {
     position: relative;
